# g4iris

./: CMakeLists.txt  README.md  sim.cc  vis.mac
include/: action.hh  analysis.hh  construction.hh  detector.hh  event.hh  generator.hh  hpgeHit.hh  hpgeSD.hh  physics.hh  run.hh  stepping.hh  tabletSD.hh
macros/: launchLoop01.mac  launchLoop02.mac  prova01.mac  prova02.mac  prova03.mac  prova04.mac  sourceSet01.mac  sourgeForLoop01.mac  sourgeForLoop02.mac
src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  hpgeHit.cc  hpgeSD.cc  physics.cc  run.cc  stepping.cc  tabletSD.cc
